align divider correctly

--- a/src/components/content/divider.module.css
+++ b/src/components/content/divider.module.css
@@ -1,12 +1,9 @@
 .divider {
-  max-width: 1360px;
-  margin: auto;
-  position: relative;
   display: block;
-  grid-area: content;
+  position: relative;
+  grid-column: content-start / content-end;
   background: url(../../images/divider.svg);
   border: none;
-  width: 100%;
   height: 4px;
 
   &:before,
@@ -21,9 +18,9 @@
     border-radius: 12px;
     box-shadow: inset 0 0 0 2px var(--color-white), 0 0 0 2px var(--color-white);
     background: var(--color-seagull); }
-    
+
   &:before {
     left: 0; }
-    
+
   &:after {
     right: 0; } }
